change: add BST define and change some comment